
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int WCHAR ;


 int CP_ACP ;
 int MB_PRECOMPOSED ;
 int MultiByteToWideChar (int ,int ,char const*,int,int *,int) ;
 scalar_t__ malloc (int) ;

char *ToWideChar(const char *cszANSIstring)
{
 int nBufSize;
 WCHAR *wideString;

 if(cszANSIstring == ((void*)0)) return ((void*)0);

 nBufSize = MultiByteToWideChar(CP_ACP, MB_PRECOMPOSED, cszANSIstring, -1, ((void*)0), 0 );
 wideString = (WCHAR *)malloc(nBufSize +1);
 MultiByteToWideChar(CP_ACP, MB_PRECOMPOSED, cszANSIstring, -1, wideString, nBufSize);
 return (char*)(wideString);
}
