; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/remote/extr_22366.c_ToWideChar.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/remote/extr_22366.c_ToWideChar.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CP_ACP = common dso_local global i32 0, align 4
@MB_PRECOMPOSED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @ToWideChar(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  store i8* %0, i8** %3, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = icmp eq i8* %6, null
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  store i8* null, i8** %2, align 8
  br label %26

9:                                                ; preds = %1
  %10 = load i32, i32* @CP_ACP, align 4
  %11 = load i32, i32* @MB_PRECOMPOSED, align 4
  %12 = load i8*, i8** %3, align 8
  %13 = call i32 @MultiByteToWideChar(i32 %10, i32 %11, i8* %12, i32 -1, i32* null, i32 0)
  store i32 %13, i32* %4, align 4
  %14 = load i32, i32* %4, align 4
  %15 = add nsw i32 %14, 1
  %16 = call i64 @malloc(i32 %15)
  %17 = inttoptr i64 %16 to i32*
  store i32* %17, i32** %5, align 8
  %18 = load i32, i32* @CP_ACP, align 4
  %19 = load i32, i32* @MB_PRECOMPOSED, align 4
  %20 = load i8*, i8** %3, align 8
  %21 = load i32*, i32** %5, align 8
  %22 = load i32, i32* %4, align 4
  %23 = call i32 @MultiByteToWideChar(i32 %18, i32 %19, i8* %20, i32 -1, i32* %21, i32 %22)
  %24 = load i32*, i32** %5, align 8
  %25 = bitcast i32* %24 to i8*
  store i8* %25, i8** %2, align 8
  br label %26

26:                                               ; preds = %9, %8
  %27 = load i8*, i8** %2, align 8
  ret i8* %27
}

declare dso_local i32 @MultiByteToWideChar(i32, i32, i8*, i32, i32*, i32) #1

declare dso_local i64 @malloc(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
